--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.6.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "faker": "^5.5.3",
+    "mongoose": "^6.1.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-data-table-component": "^7.4.5",
