--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.6.1",
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "mongoose": "^6.1.1",
